Build endpoint (#4)
* Build endpoint

* tmp

* Use multiple classic indexes instead of 1 compact one

* Accept sample paths directly from request body

* Manage different-signature size indexes

* Modify cloudbuild steps

* Add test requirements to Docker image

* Add test-requirements

* Increase timeout

* Change CI test command

* Update PR

* Sort subdirectories before iterating

* Call classic build function which accept explicit signature size

* Add tests for cobs wrapper

* Change CI test cmd

* Try changing working dir in CI

* Add new signature size if not existed

* Add integration tests

* Parse false positive rate from env

* Double current max sig size for new sig size

* Use existing signature size if it's equal to sample's signature size

* Create equally spaced subdirs for new signature sizes
